CURRENTLY STILL HAS 6.9.0 SORRY!!!! but it should work on earlier versions, so just change the ver in project properties, but if it doesn't lemme know asap
anyway modified the addworker() function so we can input email and password, which it then vomits onto our db, so u can actually log in with that worker

passing the ball to volodymyr now

--- a/AutoMagik/AutoMagik.vcxproj
+++ b/AutoMagik/AutoMagik.vcxproj
@@ -93,6 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="Firebase.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="Worker.cpp" />
     <QtRcc Include="AutoMagik.qrc" />
@@ -103,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h" />
+    <QtMoc Include="Firebase.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="Worker.h" />
   </ItemGroup>
